tests/error/comprehension_errors/illegal_short_circuit.py
from tests.util import compile_guppy


@compile_guppy
def foo(xs: list[int]) -> None:
    [x for x in xs if x < 5 and x != 6]
