tests/error/comprehension_errors/illegal_short_circuit.err
Error: Unsupported (at $FILE:6:22)
  | 
4 | @compile_guppy
5 | def foo(xs: list[int]) -> None:
6 |     [x for x in xs if x < 5 and x != 6]
  |                       ^^^^^^^^^^^^^^^^ This expression is not supported in a list comprehension

Guppy compilation failed due to 1 previous error
